--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -108,7 +108,31 @@
 {% block footer %}
 <footer id="footer">
     <div class="container">
-    </div>
+        <div class="row">
+            <div class="footer-main col-md-8">
+                <div class="footer-attribution">
+                    <p>
+                        <a href="http://opendefinition.org/ossd/" title="Open Online Software Service">
+                            <img src="http://assets.okfn.org/images/ok_buttons/os_80x15_orange_grey.png" alt=""
+                                 border=""/>
+                        </a>
+                        <a href="http://opendefinition.org/okd/" title="Open Online Software Servic">
+                            <img src="http://assets.okfn.org/images/ok_buttons/od_80x15_blue.png" alt="" border=""/>
+                        </a>
+                        <a href="http://opendefinition.org/okd/" title="Open Content">
+                            <img src="http://assets.okfn.org/images/ok_buttons/oc_80x15_blue.png" alt="" border=""/>
+                        </a>
+                        &ndash;
+                        <a href="http://creativecommons.org/licenses/by/3.0/"
+                           title="Content Licensed under a CC Attribution"></a>
+                        <a href="http://opendatacommons.org/licenses/pddl/1.0"
+                           title="Data License (Public Domain)">Data License (Public
+                            Domain)</a>
+                    </p>
+                </div>
+            </div>
+       </div>
+   </div>
 </footer>
 {% endblock footer %}
 {% block body_scripts %}
