[risk/][s]: remove % in score column - refs #1.

--- a/theme/templates/risks.html
+++ b/theme/templates/risks.html
@@ -79,7 +79,7 @@
               <span>{{ risk.total }}</span>
             </td>
             <td class="score" data-score="{{ risk[scope.score_lookup] or scope.cgr.na }}">
-              <span>{{ risk[scope.score_lookup] or scope.cgr.na }}%</span>
+              <span>{{ risk[scope.score_lookup] or scope.cgr.na }}</span>
             </td>
           </tr>
 
