[theme][s]: add source code link in footer - refs #1.

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -66,8 +66,8 @@
                             </a>
                         </li>
                         <li>
-                            <a href="{{ SITEURL }}/about/" title="About the scores">
-                                About the scores
+                            <a href="{{ SITEURL }}/about/" title="About">
+                                About
                             </a>
                         </li>
                      </ul>
@@ -124,12 +124,24 @@
                         </a>
                         &ndash;
                         <a href="http://creativecommons.org/licenses/by/3.0/"
-                           title="Content Licensed under a CC Attribution"></a>
+                           title="Content Licensed under a CC Attribution">Content License (Attribution)</a>
+                        &ndash;
                         <a href="http://opendatacommons.org/licenses/pddl/1.0"
                            title="Data License (Public Domain)">Data License (Public
                             Domain)</a>
                     </p>
                 </div>
+                <div class="footer-meta">
+                    <a class="naked" href="https://cybergreen.net/"><img
+                      src="{{SITELOGO}}" alt="" height="28"></a>
+                </div>
+            </div>
+            <div class="footer-links col-md-2">
+              <ul>
+                <li><a href="{{ SOURCE_CODE }}">Source Code</a></li>
+              </ul>
+            </div>
+            <div class="footer-links col-md-2">
             </div>
        </div>
    </div>
