--- a/theme/templates/risks.html
+++ b/theme/templates/risks.html
@@ -27,7 +27,7 @@
       <tr>
         <th>Risk</th>
         <th>Description</th>
-        <th>Best and Worst</th>
+        <th>Worst</th>
         <th>Total Devices</th>
         <th>Score</th>
       </tr>
@@ -67,13 +67,15 @@
                 <a href="{{ SITEURL }}/place/{{ place.slug }}/{{ risk.id }}/">{{ place.name }}</a>&nbsp;
                 {% endfor %}
               {% endif %}
-            <br>
-	      {% if bottom_entry %}
-		<span class="score score-bottom" data-score="{{ bottom_entry.score }}">{{ bottom_entry.score }}</span>
-                {% for place in bottom_places %}
-                <a href="{{ SITEURL }}/place/{{ place.slug }}/{{ risk.id }}/">{{ place.name }}</a>&nbsp;
-                {% endfor %}
-	      {% endif %}
+              <!--
+              <br />
+              {% if bottom_entry %}
+                  <span class="score score-bottom" data-score="{{ bottom_entry.score }}">{{ bottom_entry.score }}</span>
+                      {% for place in bottom_places %}
+                      <a href="{{ SITEURL }}/place/{{ place.slug }}/{{ risk.id }}/">{{ place.name }}</a>&nbsp;
+                      {% endfor %}
+              {% endif %}
+              -->
             </td>
             <td class="total">
               <span>{{ risk.total }}</span>
