[risk/{id}][s]: remove avg score and add summary stats.

--- a/theme/templates/risk.html
+++ b/theme/templates/risk.html
@@ -23,8 +23,6 @@
         <div class="col-md-6">
             <h1>
                 <a href="{{ SITEURL }}/risk/{{ scope.risk.id }}/">{{ scope.risk.title|truncate(60) }}</a>{% if page.year != scope.cgr.current_year %} / <a href="{{ SITEURL }}/place/{{ page.year }}/">{{ page.year }}</a>{% endif %}
-                &ndash;
-                <span class="risk-openness" data-score="{{ scope.risk[scope.score_lookup] or scope.cgr.na }}">{{ scope.risk[scope.score_lookup] }} (avg score)</span>
             </h1>
             {% if page.content %}
             <div class="row content">{{ page.content }}</div>
@@ -34,7 +32,17 @@
                 <section class="risk-about">
                   {{ scope.risk.description|markdown }}
                 </section>
-                  {{ share(scope, fragment, with_embed=True) }}
+                
+                <h3>Summary stats</h3>
+                Total affected: {{scope.risk.total}}
+                <br />
+                Max (for a country): {{scope.risk.max}}
+                <br />
+                Min (for a country): {{scope.risk.min}}
+                <br />
+
+                <h3>Share</h3>
+                {{ share(scope, fragment, with_embed=True) }}
               </div>
             </div>
         </div>
