--- a/theme/templates/places.html
+++ b/theme/templates/places.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <header id="place-intro" class="page-header">
-  <h1>Place overview {% if page.year != scope.cgr.current_year %}{{ page.year }}{% endif %}</h1>
+  <h1>Country overview {% if page.year != scope.cgr.current_year %}{{ page.year }}{% endif %}</h1>
   <hr />
   {{ page.content }}
 </header>
@@ -21,7 +21,7 @@
     <h4>Search</h4>
     <form role="form" class="form-inline data-table-tools">
       <div class="form-group">
-        <input class="form-control filter-table" type="search" name="filter-table" placeholder="Search for a place" />
+        <input class="form-control filter-table" type="search" name="filter-table" placeholder="Search for a country" />
       </div>
     </form>
   </div>
@@ -31,7 +31,7 @@
   <table id="places_overview_table" class="table data-table table-header-stuck">
     <thead>
       <tr>
-        <th class="sort_place" title="Sort by A-Z">Place</th>
+        <th class="sort_place" title="Sort by A-Z">Country</th>
         {% for risk in scope.risks %}
           <th>
             {{ risk.title }}
