[theme][xs]: add credit to atomatic in the footer.

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -132,8 +132,10 @@
                     </p>
                 </div>
                 <div class="footer-meta">
-                    <a class="naked" href="https://cybergreen.net/"><img
-                      src="{{SITELOGO}}" alt="" height="28"></a>
+                  <a class="naked" href="https://cybergreen.net/"><img src="{{SITELOGO}}" alt="" height="28"></a>
+                  <br />
+                  <br />
+                  <a href="http://atomatic.net/" style="font-size: 12px;">Built by <strong>ATOMATIC</strong> &ndash; experts in data-driven websites</a>
                 </div>
             </div>
             <div class="footer-links col-md-2">
