--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -48,6 +48,9 @@
                         </a>
                     </div>
                 </div>
+                <div class="logo-beta">
+                beta
+                </div>
                 <div class="collapse navbar-collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav" >
                         <li>
