[/place][/risk][m] Added explanatory text and links to score page

--- a/theme/templates/about.html
+++ b/theme/templates/about.html
@@ -15,4 +15,5 @@
 {{ page.content }}
 <div class="diagram">
     <img src="{{ SITEURL }}/static/images/score-diagram.png"/>
+</div>
 {%- endblock content %}
