--- a/theme/templates/risks.html
+++ b/theme/templates/risks.html
@@ -11,10 +11,7 @@
 {% endblock breadcrumbs_inner %}
 
 {% block content %}
-<div class="row">
-</div>
-
-<hr />
+  {{ page.content }}
 
 <div class="table-responsive">
   <table id="datasets_overview_table" class="table data-table table-header-stuck">
