[theme][xs]: tweak "beta" sign.

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -45,11 +45,9 @@
                     <div class="logo">
                         <a href="{{ SITEURL }}/">
                           <img src="{{ SITELOGO }}" />
+                          <span>Beta</span>
                         </a>
                     </div>
-                </div>
-                <div class="logo-beta">
-                beta
                 </div>
                 <div class="collapse navbar-collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav" >
