--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -111,8 +111,14 @@
     <div class="container">
         <div class="row">
             <div class="footer-main col-md-8">
+                <div class="footer-meta">
+                  <a class="naked" href="https://cybergreen.net/"><img src="{{SITELOGO}}" alt="" height="28"></a>
+                </div>
                 <div class="footer-attribution">
                     <p>
+                      <br />
+                        Copyright 2016, CyberGreen. All Rights Reserved.
+                        <!--
                         <a href="http://opendefinition.org/ossd/" title="Open Online Software Service">
                             <img src="http://assets.okfn.org/images/ok_buttons/os_80x15_orange_grey.png" alt=""
                                  border=""/>
@@ -130,13 +136,11 @@
                         <a href="http://opendatacommons.org/licenses/pddl/1.0"
                            title="Data License (Public Domain)">Data License (Public
                             Domain)</a>
+                        -->
                     </p>
-                </div>
-                <div class="footer-meta">
-                  <a class="naked" href="https://cybergreen.net/"><img src="{{SITELOGO}}" alt="" height="28"></a>
-                  <br />
-                  <br />
-                  <a href="http://atomatic.net/" style="font-size: 12px;">Built by <strong>ATOMATIC</strong> &ndash; experts in data-driven websites</a>
+                    <p>
+                      <a href="http://atomatic.net/" style="font-size: 12px;">Built by <strong>ATOMATIC</strong> &ndash; experts in data-driven websites</a>
+                    </p>
                 </div>
             </div>
             <div class="footer-links col-md-2">
