[place][xs]: remove n/a to get sorting working correctly on spam - fixes #13.

--- a/theme/templates/places.html
+++ b/theme/templates/places.html
@@ -63,7 +63,7 @@
             {% for risk in scope.risks %}
               {% set entry = scope.entries|search('table_places_entries', risk=risk.id, place=place.id, year=page.year)|first_or_default(None) %}
               <td class="score" data-score="{{ entry['score'] or scope.cgr.na }}">
-                 <span>{{ entry['score'] or scope.cgr.na }}</span>
+                 <span>{{ entry['score'] or '' }}</span>
               </td>
             {% endfor %}
           </tr>
