--- a/theme/templates/place.html
+++ b/theme/templates/place.html
@@ -37,7 +37,7 @@
                 <th>Rank</th>
                 <th>Risk</th>
                 <th>Previous</th>
-                <th>Count</th>
+                <th>Devices</th>
                 <th>Score</th>
             </tr>
         </thead>
