--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -23,6 +23,16 @@
     {% endblock head_css %}
     <link rel="icon" href="{{ SITEURL }}/static/images/favicon.ico">
     <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+              ga('create', 'UA-80341493-1', 'auto');
+                ga('send', 'pageview');
+
+    </script>
+    <script>
         var siteUrl = '{{ SITEURL }}';
     </script>
     {% block head_scripts %}{% endblock head_scripts %}
